GirafRest/wwwroot/admin/css/styles.css
#inspire.giraf-bg {
    /* The image used */
    background-image: url("/admin/img/giraf.jpg");
    /* Full height */
    height: 100%;
    /* Center and scale the image nicely */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

